# LMDZE

./: CHANGELOG.md  CMakeLists.txt  ConfigureCompilerFlags.cmake  Doxyfile  GNUmakefile  LMDZE_NQSII.ksh  README.md  TAGS.cmake  check_coefoz.jnl  common_sources  comp_o3.jnl  depend.mk  dimens_m.f  dimens_m.f90  dimensions.F  dimensions.F90  dimensions.f  directories  grep.mk  nag_rules.mk  src_ce0l  src_ce0l_only  src_gcm  src_gcm_only  src_no_main_ce0l_only  src_no_main_gcm_only  src_test_fxhyp  src_test_inifilr  src_test_inter_barxy  src_test_ozonecm  test_fxhyp.f  test_inter_barxy.f  tests_LMDZE.json
Compilation/: GNUmakefile  common_sources  depend.mk  directories  nag_rules.mk  src_ce0l  src_ce0l_only  src_gcm  src_gcm_only  src_test_fxhyp  src_test_inter_barxy
Compiler_options/: f90.mk  g95.mk  gfortran_debug.mk  ifort_debug.mk  nag_modules95_FC_debug.mk  nagfor_debug.mk  pgf95_debug.mk  pgfortran_debug.mk  pgfortran_fast.mk  (+2 more)
dyn3d/: CMakeLists.txt  PVtheta.f  abort_gcm.f90  adaptdt.f  adaptdt.f90  addfi.f  addfi.f90  advect.f  advect.f90  advn.f  advn.f90  advtrac.f  advtrac.f90  advx.f90  advxp.f  advxp.f90  advy.f  advyp.f  advyp.f90  advz.f  advzp.f  bernoui.f  bilan_dyn.f  bilan_dyn.f90  caladvtrac.f  caladvtrac.f90  caldyn.f  caldyn.f90  caldyn0.f  caldyn0.f90  calfis.f  calfis.f90  ce0l.f  ce0l.f90  coefpoly.f  coefpoly.f90  comconst.f  comconst.f90  comgeom.f  comgeom.f90  (+171 more)
dyn3d/ADVN/: CMakeLists.txt  advn.f90  advnqx.f90  advnqy.f90  advnqz.f90  advnx.f90  advny.f90  advnz.f90
dyn3d/Dissipation/: CMakeLists.txt  comdissnew.f  dissip.f  dissip.f90  divgrad2.f  divgrad2.f90  file_list  gradiv2.f  gradiv2.f90  inidissip.f  inidissip.f90  nxgraro2.f  nxgraro2.f90
dyn3d/Guide/: CMakeLists.txt  conf_guide.f  conf_guide.f90  coordij.f  coordij.f90  file_list  guide.f  guide.f90  init_tau2alpha.f  tau2alpha.f90
dyn3d/Guide/Read_reanalyse/: CMakeLists.txt  nat2gcm.f90  pres2lev.f90  read_reanalyse.f  read_reanalyse.f90  reanalyse2nat.f  reanalyse2nat.f90
dyn3d/Inter_barxy/: CMakeLists.txt  file_list  inter_barx.f  inter_barx.f90  inter_barxy.f  inter_barxy.f90  inter_bary.f  inter_bary.f90  ord_coord.f  ord_coord.f90  ord_coordm.f  ord_coordm.f90  test_inter_barxy.f  test_inter_barxy.f90
dyn3d/Read_reanalyse/: correctbid.f90  nat2gcm.f  read_reanalyse.f  reanalyse2nat.f  reanalyse2nat.f90
dyn3d/Vlsplt/: CMakeLists.txt  vlsplt.f  vlx.f  vlx.f90  vly.f  vly.f90  vlz.f
dynphy_lonlat/: CMakeLists.txt  calfis.f90  ce0l.f90  etat0.f90  etat0dyn.f90  etat0phys.f90  grid_change.f90  grille_m.f90  limit.f90  start_init_dyn.f90  start_init_phys.f90  start_init_phys_m.f90  start_init_subsurf.f90  start_inter_3d.f90  test_disvert.f90
filtrez/: CMakeLists.txt  acc.f  eigen_sort.f90  file_list  filtreg.f  filtreg_hemisph.f  filtreg_scal.f90  filtreg_v.f90  inifgn.f  inifgn.f90  inifilr.f  inifilr.f90  inifilr_hemisph.f  inifilr_hemisph.f90  jacobi.f  jacobi.f90  test_inifilr.f  test_inifilr.f90
phylmd/: CMakeLists.txt  FCTTRE.f  FCTTRE.f90  YOMCST.f  YOMCST.f90  aaam_bud.f  aaam_bud.f90  ajsec.f90  albedo.f90  alboc_cd.f  albsno.f  calbeta.f  calltherm.f  clcdrag.f  clesphys.f  clesphys.f90  clesphys2.f  clesphys2.f90  clift.f  clift.f90  clmain.f  clouds_gno.f90  clqh.f  cltrac.f  cltracrn.f  cltracrn.f90  clvent.f  coefcdrag.f  coefkz.f  coefkz2.f  comfisrtilp.f90  comgeomphy.f  concvl.f  concvl.f90  condsurf.f90  conema3_m.f90  conf_phys.f  conf_phys.f90  convect3.f  ctherm.f  (+96 more)
phylmd/CV30_routines/: CMakeLists.txt  cv30_closure.f90  cv30_compress.f  cv30_compress.f90  cv30_feed.f  cv30_mixing.f90  cv30_param.f  cv30_param.f90  cv30_prelim.f  cv30_prelim.f90  cv30_undilute1.f  cv30_undilute2.f90  cv30_unsat.f  cv30_yield.f  cv30_yield.f90  cv_thermo.f  cv_thermo.f90  file_list
phylmd/CV3_routines/: cv3_closure.f  cv3_compress.f  cv3_feed.f  cv3_mixing.f90  cv3_param.f  cv3_tracer.f  cv3_trigger.f  cv3_uncompress.f  cv3_undilute1.f  cv3_undilute2.f  cv3_unsat.f  cv3_yield.f
phylmd/CV_routines/: cv_closure.f  cv_compress.f  cv_feed.f  cv_mixing.f  cv_param.f  cv_prelim.f  cv_trigger.f  cv_uncompress.f  cv_undilute1.f  cv_undilute2.f  cv_unsat.f  cv_yield.f
phylmd/Conflx/: CMakeLists.txt  YOECUMF.f  conflx.f  conflx.f90  file_list  flxadjtq.f90  flxasc.f90  flxbase.f90  flxddraf.f90  flxdlfs.f90  flxflux.f  flxflux.f90  flxini.f90
phylmd/Interface_surf/: CMakeLists.txt  alboc.f  alboc_cd.f  alboc_cd.f90  albsno.f  albsno.f90  calbeta.f  calc_coef.f90  calcul_fluxs.f  calcul_fluxs.f90  cdrag.f  cdrag.f90  climb_hq_down.f  climb_hq_down.f90  climb_hq_up.f  climb_hq_up.f90  clqh.f  clqh.f90  clvent.f  clvent.f90  coef_diff_turb.f  coef_diff_turb.f90  coefkz.f  coefkz.f90  coefkz2.f90  coefkzmin.f  conf_interface.f  conf_interface.f90  file_list  fonte_neige.f  fonte_neige.f90  gath2cpl.f  hbtm.f  hbtm.f90  interface_surf.f  interface_surf.f90  interfoce_lim.f  interfoce_lim.f90  interfsur_lim.f  interfsur_lim.f90  (+19 more)
phylmd/Mobidic/: CMakeLists.txt  file_list  o3_chem.f  o3_chem.f90  regr_lat_time_coefoz.f  regr_lat_time_coefoz.f90  regr_pr_av.f  regr_pr_av.f90  regr_pr_comb_coefoz.f90  regr_pr_int.f  regr_pr_int.f90  regr_pr_o3.f  regr_pr_o3.f90
phylmd/Orography/: CMakeLists.txt  YOEGWD.f90  drag_noro.f  drag_noro.f90  file_list  grid_noro.f90  grid_noro_m.f  grid_noro_m.f90  gwprofil.f90  gwstress.f  gwstress.f90  lift_noro.f  lift_noro.f90  orodrag.f  orodrag.f90  orolift.f  orolift.f90  orosetup.f  orosetup.f90  start_init_orog.f  start_init_orog.f90  start_init_orog_m.f90
phylmd/Radlwsw/: CMakeLists.txt  file_list  lw.f90  lwb.f  lwb.f90  lwbv.f90  lwc.f  lwc.f90  lwtt.f90  lwttm.f  lwttm.f90  lwu.f90  lwv.f90  lwvb.f  lwvb.f90  lwvd.f  lwvd.f90  lwvn.f  lwvn.f90  raddim.f90  raddimlw.f90  radlwsw.f90  sw.f  sw.f90  sw1s.f  sw1s.f90  sw2s.f  sw2s.f90  swclr.f  swclr.f90  swde.f  swde.f90  swr.f  swr.f90  swtt.f  swtt.f90  swtt1.f  swtt1.f90  swu.f  swu.f90
phylmd/Thermcell/: CMakeLists.txt  calltherm.f  calltherm.f90  ctherm.f90  dqthermcell.f90  dqthermcell2.f  dvthermcell2.f  dvthermcell2.f90  file_list  thermcell.f  thermcell.f90  thermcell_dq.f90
(+1111 files in other folders)
